--- a/static/css/style.css
+++ b/static/css/style.css
@@ -194,7 +194,8 @@
 	top: 0;
 	z-index: 1;
 	height: 100%;
-	height: -webkit-fill-available;
+	/* 修复Safari 浏览器兼容性问题 - 文字消失 */
+	/* height: -webkit-fill-available; */
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
